; ModuleID = '/home/carl/AnghaBench/linux/net/ceph/extr_osd_client.c_abort_fn.c'
source_filename = "/home/carl/AnghaBench/linux/net/ceph/extr_osd_client.c_abort_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ceph_osd_request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ceph_osd_request*, i8*)* @abort_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @abort_fn(%struct.ceph_osd_request* %0, i8* %1) #0 {
  %3 = alloca %struct.ceph_osd_request*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.ceph_osd_request* %0, %struct.ceph_osd_request** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i32*
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  %9 = load %struct.ceph_osd_request*, %struct.ceph_osd_request** %3, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @abort_request(%struct.ceph_osd_request* %9, i32 %10)
  ret i32 0
}

declare dso_local i32 @abort_request(%struct.ceph_osd_request*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
